hafas-graphql/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hafas-graphql
  namespace: hafas-graphql
  labels:
    app: hafas-graphql
spec:
  replicas: 1
  template:
    metadata:
      name: hafas-graphql
      labels:
        app: hafas-graphql
    spec:
      containers:
        - name: hafas-graphql
          image: ghcr.io/nycodeghg/hafas-projects/hafas-graphql:0.1.0-nightly@sha256:6be3dc310c7ca941d26156bfea395ce279f008272f408dbd35e180df9e610c2a
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: hafas-graphql
