hafas-graphql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hafas-graphql
  namespace: hafas-graphql
spec:
  selector:
    app: hafas-graphql
  ports:
    - port: 8069
